--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
       
       - name: Install, build, and upload your site
         uses: withastro/action@v5
+        env:
+          NODE_ENV: production
 
   deploy:
     needs: build
